2006-07-28 nowel(S2Dao.PHP5-1.2.0-RC)

    * added

2006-07-24 nowel(S2Dao.PHP5-1.1.0)

================ S2Dao.PHP5-1.1.0(stable) 更新履歴 ===================

    * add: 対応するDBMSに以下を追加しました。(nowel)
        - Firebird
        - Oracle
        - Sybase
    * modify: MySQL接続中にBUFFERED_QUERYを使用するように変更しました。(nowel)
    	    - PHP5.1.3 以降及び PDO 1.0.3以降であり、かつ
    	       MySQL接続中の場合にPDO::MYSQL_ATTR_USE_BUFFERED_QUERY, trueをセットします。
    * rename: S2Dao_PagerResultSetWrapperImpl -> S2Dao_PagerBasicResultSetWrapper(yonekawa)
    * add: S2Dao_Standard::usableLimitOffsetQuery (yonekawa)
           S2Dao_MySQL::usableLimitOffsetQuery
           S2Dao_PostgresSQL::usableLimitOffsetQuery
        -  DBMSでLimit,Offset句が使用可能かを返します
    * fix: IN句を含むSQLコメントが正しく処理されない不具合を修正しました。(nowel)
    * fix: SQLコメントに埋め込まれたバインド変数のネスト時に値が正しくならない不具合を修正しました。(nowel)
    * fix: QUERYアノテーション時に"order by"句を先頭に指定するとPDOExceptionが発生する不具合を修正しました。(nowel)
    * fix: findコマンド使用時とQUERYアノテーションの動作がマッチしていない不具合を修正しました。(nowel)
    * fix: S2Dao_AbstractBeanMetaDataResultSetHandler, S2Dao_BeanMetaDataResultSetHandler(nowel)
        - 一部のプロパティとSQL分の大小文字判別にstrcasecmpを使うようにしました。
    * fix[DAOPHP-3]: PDOトランザクションが正しく発行されない不具合を修正しました。(nowel)
    * fix[DAOPHP-5]: S2Dao_BasicHandler (nowel)
    	    - PHP5.1.3 以降及び PDO 1.0.3以降であり、かつ
    	       MySQL接続中の場合にPDO::ATTR_EMULATE_PREPARES, trueをセットするようにしました。
    * fix: S2Dao_BasicSelectHandler (nowel)
        - S2Dao_BasicStatementFactoryが正しくセットされない不具合を修正しました。
    * fix: S2PagerでuseLimitOffsetQueryプロパティをtrueにした時に、Countが取得できない不具合を修正しました。(yonekawa)
    * add: ResultSetHandler(nowel)
        - extension/db/impl/S2Dao_AbstractBeanResultSetHandler
        - extension/db/impl/S2Dao_AbstractMapResultSetHandler
    	    - extension/db/impl/S2Dao_MapResultSetHandller
        - extension/db/impl/S2Dao_MapListResultSetHandler
        - extension/db/impl/S2Dao_BeanResultSetHandler
        - extension/db/impl/S2Dao_BeanListResultSetHandler