@@ -1,3 +1,7 @@
+2006-08-16  yonekawa(S2Dao.PHP5-1.2.0-RC)
+
+    * add: /dao/pager/S2Dao_PagerView.class.php
+
 2006-07-28 nowel(S2Dao.PHP5-1.2.0-RC)
 
     * added
